# Werewolf-Arena

./: DIFFICULTY_FEATURE.md  README.md  __main__.py  dockerfile  main.py  pyproject.toml
.github/workflows/: publish.yml
greenAgent/: README.md  dockerfile  main.py  pyproject.toml
greenAgent/src/a2a/: agent.py  agent_card.py  executor.py
greenAgent/src/evaluation/: scoring.py
greenAgent/src/game/: AgentState.py  Game.py  GameData.py
greenAgent/src/models/: Elimination.py  Game.py  GameData.py  Message.py  Participant.py  Suspect.py  __init__.py
greenAgent/src/models/abstract/: Phase.py
greenAgent/src/models/enum/: EventType.py
greenAgent/src/phases/: bidding.py  debate.py  game_end.py  night.py  round_end.py  voting.py
greenAgent/src/services/: llm.py
greenAgent/tests/: conftest.py  test_bidding.py  test_debate.py  test_discussion.py  test_game_end.py  test_night.py  test_round_end.py  test_voting.py
results/: Agent-Beats-UTA-20260127-023509.json
src/: prompts.py
src/a2a/: agent.py  executor.py
src/evaluation/: scoring.py
src/game/: AgentState.py  Game.py  GameData.py  analytics.py
src/models/: Bid.py  EvalConfig.py  EvalRequest.py  Participant.py
src/models/enum/: Difficulty.py  EliminationType.py  EventType.py  Role.py
src/phases/: bidding.py  debate.py  game_end.py  night.py  round_end.py  voting.py
src/services/: llm.py
test/: pyproject.toml
tests/: conftest.py  queries.json  test_bidding.py  test_difficulty.py  test_duckdb.py  test_voting.py
