[project]
name = "greenagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[all,http,http-server]>=0.3.22",
    "agentbeats>=1.2.6",
    "uuid>=1.30",
    "uvicorn>=0.38.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "pytest>=9.0.2",
    "google-genai>=1.57.0",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
